[gd_scene load_steps=3 format=3 uid="uid://bbu6grgjnwrvw"]

[ext_resource type="Theme" uid="uid://cdp8qvjvdfebe" path="res://assets/themes/terminal.tres" id="1_1nu0h"]
[ext_resource type="Script" path="res://Scripts/UI/Controls/TerminalTabContainer.gd" id="1_n8p1u"]

[node name="TerminalTabContainer" type="VBoxContainer" node_paths=PackedStringArray("_tab_bar", "_controls_container")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1nu0h")
script = ExtResource("1_n8p1u")
_tab_bar = NodePath("h/TabBar")
_controls_container = NodePath("PanelContainer")

[node name="h" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TabBar" type="TabBar" parent="h"]
layout_mode = 2
clip_tabs = false
tab_close_display_policy = 2
max_tab_width = 250
drag_to_rearrange_enabled = true

[node name="NewTabButton" type="Button" parent="h"]
layout_mode = 2
tooltip_text = "Open New Terminal"
text = "+"
flat = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="tab_changed" from="h/TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="tab_close_pressed" from="h/TabBar" to="." method="_on_tab_bar_tab_close_pressed"]
[connection signal="pressed" from="h/NewTabButton" to="." method="_on_new_tab_button_pressed"]
